# depscanner

./: Cargo.toml  README.md  dependencies.txt  dev_dependencies.txt
deps_fetcher/: Cargo.toml
deps_fetcher/src/: deps_sample.txt  main.rs
index_scanner/: Cargo.toml
index_scanner/src/: main.rs
